--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smarttable",
+  "name": "smarttable-ag",
   "version": "0.1.0",
   "description": "The goal of this project is to provide a smart html table.",
   "main": "",
