--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "smarttable-ag",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "The goal of this project is to provide a smart html table.",
   "main": "",
-  "scripts": {},
+  "scripts": {
+    "start": "grunt",
+    "uglify": "grunt uglify",
+    "prepare": "npm-run-all uglify"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/andresg9108/smarttable.git"
@@ -16,5 +20,13 @@
   "homepage": "https://github.com/andresg9108/smarttable#readme",
   "dependencies": {
     "jquery": "^3.5.1"
+  },
+  "devDependencies": {
+    "grunt": "^1.2.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-uglify": "^5.0.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "matchdep": "^2.0.0",
+    "npm-run-all": "^4.1.5"
   }
 }
