--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smarttable-ag",
-  "version": "2.0.4",
+  "version": "2.1.0",
   "description": "The goal of this project is to provide a smart html table.",
   "main": "",
   "scripts": {
@@ -12,19 +12,19 @@
     "type": "git",
     "url": "git+https://github.com/andresg9108/smarttable.git"
   },
-  "author": "Andres Gonzalez",
+  "author": "Andrés González",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/andresg9108/smarttable/issues"
   },
   "homepage": "https://github.com/andresg9108/smarttable#readme",
   "dependencies": {
-    "jquery": "^3.5.1"
+    "jquery": "^3.6.0"
   },
   "devDependencies": {
-    "grunt": "^1.3.0",
+    "grunt": "^1.5.3",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-uglify": "^5.0.0",
+    "grunt-contrib-uglify": "^5.2.2",
     "grunt-contrib-watch": "^1.1.0",
     "matchdep": "^2.0.0",
     "npm-run-all": "^4.1.5"
